unpackaged/main/default/objects/ActeurOpportunite__c/ActeurOpportunite__c.object-meta.xml
<CustomObject>
    <label>Acteur de l&#39;opportunité</label>
    <nameField>
        <displayFormat>GF-ACT-{0000000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acteurs de l&#39;opportunité</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>