unpackaged/main/default/objects/ActeurOpportunite__c/fields/Commentaires__c.field-meta.xml
<CustomField>
    <fullName>Commentaires__c</fullName>
    <label>Commentaires</label>
    <type>TextArea</type>
</CustomField>