unpackaged/main/default/objects/ActeurOpportunite__c/fields/CompteRaisonSociale__c.field-meta.xml
<CustomField>
    <fullName>CompteRaisonSociale__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte (Raison Sociale)</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6)</booleanFilter>
        <errorMessage>Le compte choisi doit correspondre au rôle sélectionné et au pays ou ils opèrent</errorMessage>
        <filterItems>
            <field>$Source.Role__c</field>
            <operation>equals</operation>
            <value>Client, Partenaire</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte Prospect / Client, Groupement, Compte Multi-Niveaux, Grand Compte</value>
        </filterItems>
        <filterItems>
            <field>$Source.Role__c</field>
            <operation>equals</operation>
            <value>Concurrent</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte Concurrent</value>
        </filterItems>
        <filterItems>
            <field>$Source.Role__c</field>
            <operation>equals</operation>
            <value>Fournisseur</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte Fournisseur</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>