unpackaged/main/default/objects/ActeurOpportunite__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Rôle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Concurrent</fullName>
            </value>
            <value>
                <fullName>Fournisseur</fullName>
            </value>
            <value>
                <fullName>Partenaire</fullName>
            </value>
            <value>
                <fullName>Utilisateur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>