unpackaged/main/default/objects/ActeurOpportunite__c/fields/StatutCompte__c.field-meta.xml
<CustomField>
    <fullName>StatutCompte__c</fullName>
    <formula>IF( ISPICKVAL( CompteRaisonSociale__r.Statut__c, &quot;Inactif&quot; ), &quot;Inactif&quot;, &quot;Actif&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut du compte</label>
    <type>Text</type>
</CustomField>