unpackaged/main/default/objects/ActeurOpportunite__c/validationRules/ACO_VR01_RequiredImport.validationRule-meta.xml
<ValidationRule>
    <fullName>ACO_VR01_RequiredImport</fullName>
    <active>true</active>
    <description>Required Fields Import</description>
    <errorConditionFormula>AND( OR( ISBLANK(Opportunite__c) , ISBLANK(CompteRaisonSociale__c) , ISBLANK(TEXT(Role__c))), $Setup.Bypass__c.BypassValidationRules__c = false)</errorConditionFormula>
    <errorMessage>Les champs obligatoires doivent être remplis.</errorMessage>
</ValidationRule>