unpackaged/main/default/objects/ActeurOpportunite__c/validationRules/ACO_VR02_CompteDraftRefuseInactf.validationRule-meta.xml
<ValidationRule>
    <fullName>ACO_VR02_CompteDraftRefuseInactf</fullName>
    <active>true</active>
    <description>OPP-RG-016</description>
    <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(CompteRaisonSociale__c)
),
NOT(TEXT(CompteRaisonSociale__r.Statut__c) = $Label.CPT_Statut_Valide),
NOT(TEXT(CompteRaisonSociale__r.Statut__c) = $Label.CPT_Statut_ValideCM),
$Setup.Bypass__c.BypassValidationRules__c = false
)</errorConditionFormula>
    <errorDisplayField>CompteRaisonSociale__c</errorDisplayField>
    <errorMessage>Seul un compte en statut &quot;Validé&quot; ou &quot;Validé CM&quot; peut être choisi comme acteur sur une opportunité.</errorMessage>
</ValidationRule>