unpackaged/main/default/objects/ActeurOpportunite__c/validationRules/ACO_VR03_Compte_pays_operation.validationRule-meta.xml
<ValidationRule>
    <fullName>ACO_VR03_Compte_pays_operation</fullName>
    <active>true</active>
    <description>Le compte choisi doit opérer sur le même pays du compte de l&#39;opportunité</description>
    <errorConditionFormula>AND
(
 
 Opportunite__r.RecordType.Id &lt;&gt; &#39;01220000000jkLmAAI&#39;

,
 NOT CONTAINS( (CompteRaisonSociale__r.TECHPaysOperation__c) ,  TEXT(TECHPaysCompte__c ))
)</errorConditionFormula>
    <errorDisplayField>CompteRaisonSociale__c</errorDisplayField>
    <errorMessage>Le compte choisi doit opérer sur le même pays du compte de l&#39;opportunité</errorMessage>
</ValidationRule>